<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharacterDetailsActivity">


    <EditText
        android:id="@+id/hp"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/spinner_alignments"
        app:layout_constraintTop_toBottomOf="@+id/spinner_alignments" />

    <TextView
        android:id="@+id/lblHP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hp"
        app:layout_constraintBottom_toBottomOf="@+id/hp"
        app:layout_constraintEnd_toEndOf="@+id/lblAlignment"
        app:layout_constraintStart_toStartOf="@+id/lblAlignment"
        app:layout_constraintTop_toTopOf="@+id/hp" />

    <TextView
        android:id="@+id/lblName"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginStart="24dp"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="@+id/editName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editName"
        app:layout_constraintVertical_bias="0.448" />

    <TextView
        android:id="@+id/lblAlignment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alignment"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_alignments"
        app:layout_constraintEnd_toEndOf="@+id/lblClass"
        app:layout_constraintStart_toStartOf="@+id/lblClass"
        app:layout_constraintTop_toTopOf="@+id/spinner_alignments" />

    <TextView
        android:id="@+id/lblClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtClass"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_classes"
        app:layout_constraintEnd_toEndOf="@+id/lblRace"
        app:layout_constraintStart_toStartOf="@+id/lblRace"
        app:layout_constraintTop_toTopOf="@+id/spinner_classes"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lblRace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/race"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_races"
        app:layout_constraintEnd_toEndOf="@+id/lblName"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="@+id/lblName"
        app:layout_constraintTop_toTopOf="@+id/spinner_races"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/spinner_alignments"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/spinner_classes"
        app:layout_constraintTop_toBottomOf="@+id/spinner_classes" />

    <EditText
        android:id="@+id/lvl"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/xp"
        app:layout_constraintTop_toBottomOf="@+id/xp" />

    <TextView
        android:id="@+id/lblLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level"
        app:layout_constraintBottom_toBottomOf="@+id/xp"
        app:layout_constraintEnd_toEndOf="@+id/lblHP"
        app:layout_constraintStart_toStartOf="@+id/lblHP"
        app:layout_constraintTop_toTopOf="@+id/xp" />

    <TextView
        android:id="@+id/lblXP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xp"
        app:layout_constraintBottom_toBottomOf="@+id/lvl"
        app:layout_constraintEnd_toEndOf="@+id/lblLevel"
        app:layout_constraintStart_toStartOf="@+id/lblLevel"
        app:layout_constraintTop_toTopOf="@+id/lvl" />


    <EditText
        android:id="@+id/xp"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/hp"
        app:layout_constraintTop_toBottomOf="@+id/hp" />

    <Spinner
        android:id="@+id/spinner_races"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/editName"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <Spinner
        android:id="@+id/spinner_classes"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/spinner_races"
        app:layout_constraintTop_toBottomOf="@+id/spinner_races" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="115dp" />


</androidx.constraintlayout.widget.ConstraintLayout>